fidoconfig 0.91
---------------

----- cvs ci ------
Mon Apr 24 16:35:03 NOVST 2000
max:
* small fix in e_writeCheck
* now possible create two links with the same aka and
  different our aka and link them to different areas.
  if own useAka of area and ourAka used for link not
  the same -- there is no export & import...

----- cvs ci ------
Sun Apr 23 22:12:26 NOVST 2000
max:
* changes with e_readCheck & e_writeCheck (fixed optgrp operations)

----- cvs ci ------
Sat Apr 21 2:44:00 MSK 2000
Nestyurkin Nikolay:
* bugfix of previous fix (int->uint)

----- cvs ci ------
Wed Apr 19 16:52:16 MSD 2000
max (patch from Serguei Revtov):
* unifying some boolean tokens parsing

----- cvs ci ------
Sat Apr 15 14:16:00 MSK 2000
nn:
* disableTID small fix

----- cvs ci ------
Sat Apr 15 10:47:38 NOVST 2000
max:
* add disableTID token

----- cvs ci ------
Sun Apr 10 16:40:00 CET 2000
sms:
* some changes to fidoconfig.h and affected files needed to automatically
  convert fidoconfig.h to fidoconf.pas with h2pas

----- cvs ci ------
Sun Apr  9 22:41:43 NOVST 2000
max:
* add e_readCheck & e_writeCheck
* now export, import & mandatory dispayed by tparser correctly

----- cvs ci ------
Tue Apr  4 12:51:02 MSD 2000
max (patch from Serguei Revtov):
* createAreasCase & areasFileNameCase tokens

----- cvs ci ------
Mon Apr  3 17:39:30 NOVST 2000
max (patch from Serguei Revtov):
* additional checks on carbons

----- cvs ci ------
Sat Apr  1 20:45:39 NOVST 2000
max:
* document tokens LinkGrp & NetArea

----- cvs ci ------
Mon Mar 27 13:28:49 MSD 2000
max (patch from Serguei Revtov):
* pktsize token

----- cvs ci ------
Thu Mar 23 16:10:45 NOVT 2000
max:
* exit to shell after printing error when passthrough + sqush (jam, sdm) used
patch from Serguei:
* -nopack token

----- cvs ci ------
Mon Mar 20 08:56:28 MSK 2000
max (patch from Serguei Revtov):
* change legacy SUN & Win makefiles to compile with new includes, simplifying
* return back default config for "other unixes"
